# inferah-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: synthetic.py
inferah_engine/: __init__.py  datasource.py  decompose.py  demo.py  engine.py  loader.py  measures.py  synthetic.py  tree.py
notebooks/: demo.ipynb
tests/: test_decompose.py  test_engine.py  test_packs.py
trees/: acquisition.yaml  gmv_drop.yaml  gmv_foodtech_deep.yaml
