[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "inferah-engine"
version = "0.1.0"
description = "Deterministic, reconciled variance investigation over a frozen hypothesis tree."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
postgres = ["SQLAlchemy>=2.0", "psycopg2-binary>=2.9"]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["inferah_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
